syntax = "proto3";

option java_multiple_files = true;

package org.hypertrace.alert.engine.eventcondition.config.service.v1;

import "google/protobuf/struct.proto";

message AlertTask {
  sfixed64 current_execution_time = 1;
  sfixed64 last_execution_time = 2;

  string event_condition_id = 4;
  string event_condition_type = 5;
  google.protobuf.Value event_condition_value = 6;

}
