syntax = "proto3";

option java_multiple_files = true;

package org.hypertrace.alert.engine.eventcondition.config.service.v1;

message MetricAnomalyEventCondition {
  MetricAnomalyEvaluationRule evaluation_rule = 1;
  NotificationCondition notification_condition = 2;
}

message MetricAnomalyEvaluationRule {
  MetricSelection metric_selection = 1;
  repeated ViolationCondition violation_condition = 2;
}

message MetricSelection {
  string key = 1;
  string scope = 2;
  MetricAggregationFunction metric_aggregation_function = 3;
  string metric_aggregation_interval = 4; //iso duration string PT15S
  repeated Filter filters = 5;
}

enum MetricAggregationFunction {
  METRIC_AGGREGATION_FUNCTION_TYPE_UNSPECIFIED = 0;
  METRIC_AGGREGATION_FUNCTION_TYPE_SUM = 1;
  METRIC_AGGREGATION_FUNCTION_TYPE_AVG = 2;
}

message Filter {
  oneof filter {
    LeafFilter leaf_filter = 1;
    CompositeFilter composite_filter = 2;
  }
}

message LeafFilter {
  LhsExpression lhs_expression = 1;
  Operator operator = 2;
  RhsExpression rhs_expression = 3;
}

enum Operator {
  OPERATOR_UNSPECIFIED = 0;
  OPERATOR_EQ = 1;
}

message CompositeFilter {
  Operator operator = 1;
  Filter lhs_filter = 2;
  Filter rhs_filter = 3;
}


message LhsExpression {
  oneof value {
    ColumnIdentifier column_identifier = 1;
  }
}

message RhsExpression {
  oneof value {
    Literal literal = 1;
  }
}

message ColumnIdentifier {
  string id = 1;
}

message Literal {
  Value value = 1;
}

message Value {
  oneof value {
    string string = 1;
  }
}

enum Severity {
  SEVERITY_UNSPECIFIED = 0;
  SEVERITY_CRITICAL = 1;
  SEVERITY_WARNING = 2;
}

message ViolationCondition {
  Severity severity = 1;
  oneof condition {
    StaticThreshold static_threshold = 2;
  }
  string duration = 3; // iso duration string
}

message StaticThreshold {
  double value = 1;
  StaticThresholdOperator operator = 3;
}

enum StaticThresholdOperator {
  STATIC_THRESHOLD_OPERATOR_UNSPECIFIED  = 0;
  STATIC_THRESHOLD_OPERATOR_GT = 1;
  STATIC_THRESHOLD_OPERATOR_LT = 2;
  STATIC_THRESHOLD_OPERATOR_GTE = 3;
  STATIC_THRESHOLD_OPERATOR_LTE = 4;
}

message NotificationCondition {
  // todo : yet to define.
}
