syntax = "proto3";

option java_multiple_files = true;

package org.hypertrace.alert.engine.metric.anomlay.rule.config.service.v1;

enum MetricAggregationFunctionType {
  METRIC_AGGREGATION_FUNCTION_TYPE_UNSPECIFIED = 0;
  METRIC_AGGREGATION_FUNCTION_TYPE_SUM = 1;
  METRIC_AGGREGATION_FUNCTION_TYPE_AVG = 2;
}

enum BoundingBoxFunctionType {
  BOUNDING_BOX_FUNCTION_TYPE_UNSPECIFIED = 0;
  BOUNDING_BOX_FUNCTION_TYPE_BASIC = 1;
  BOUNDING_BOX_FUNCTION_TYPE_STANDARD_DEVIATION = 2;
}

enum BaselineFunctionType {
  BASELINE_FUNCTION_TYPE_UNSPECIFIED = 0;
  BASELINE_FUNCTION_TYPE_MEDIAN = 2;
  BASELINE_FUNCTION_TYPE_AVG = 3;
}

enum ValueType {
  VALUE_TYPE_UNSPECIFIED = 0;
  VALUE_TYPE_STRING = 1;
}

enum Operator {
  OPERATOR_UNSPECIFIED = 0;
  OPERATOR_EQ = 1;
}

enum StaticThresholdOperator {
  STATIC_THRESHOLD_OPERATOR_UNSPECIFIED  = 0;
  STATIC_THRESHOLD_OPERATOR_GT = 1;
  STATIC_THRESHOLD_OPERATOR_LT = 2;
}

enum Severity {
  SEVERITY_UNSPECIFIED = 0;
  SEVERITY_CRITICAL = 1;
  SEVERITY_WARNING = 2;
}
